[gd_scene load_steps=4 format=3 uid="uid://vqkenmjritny"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_qq7jn"]
[ext_resource type="Texture2D" uid="uid://dhubfkuwpbc0g" path="res://assets/sprites/box/box-new-bg.png" id="2_5qrd6"]
[ext_resource type="Texture2D" uid="uid://ddgx65qfnk676" path="res://assets/icons/icon.png" id="2_pffb3"]

[node name="StartScreenMarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 120
script = ExtResource("1_qq7jn")

[node name="Box-new-bg" type="Sprite2D" parent="."]
position = Vector2(533, 1171)
texture = ExtResource("2_5qrd6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 160

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_pffb3")
expand_mode = 4

[node name="CurrentBestLabel" type="RichTextLabel" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/italics_font_size = 45
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center][i]Current Best:[/i][/center]"
fit_content = true

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "START"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "QUIT"

[node name="StartLabel" type="RichTextLabel" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 150
bbcode_enabled = true
text = "[center]START[/center]"
fit_content = true

[node name="QuitLabel" type="RichTextLabel" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 150
bbcode_enabled = true
text = "[center]QUIT[/center]"
fit_content = true

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 750

[node name="MadeLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "Made with <3 by Shivi."
fit_content = true

[node name="VersionLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[right]v0.1.0[/right]"
fit_content = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
